# my-data-engineering-zoomcamp

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  uv.lock.bak
01-docker-terraform/: README.md  data-ingest.py  data-ingest_nb.ipynb
01-docker-terraform/.virtual_documents/: data-ingest_nb.ipynb
01-docker-terraform/terraform/: docker-compose.yaml  main.tf  variables.tf
02-workflow-orchestration/: ETL-postgres.yaml  README.md  docker-compose.yaml  docker-compose.yaml_with_pgadmin.bak
03-data-warehouse/: README.md  load_yellow_taxi_data.py
04-analytics-engineering/: README.md
04-analytics-engineering/taxi_rides_ny/: .gitignore  data-fhv-ingest.py  data-ingest.py  dbt_project.yml  todo.txt
04-analytics-engineering/taxi_rides_ny/models/fhv/: raw_fhv_tripdata.sql
04-analytics-engineering/taxi_rides_ny/models/marts/: schema.yml
04-analytics-engineering/taxi_rides_ny/models/staging/: sources.yml  stg_fhv_tripdata.sql
