[project]
name = "my-data-engineering-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.0",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "catppuccin-jupyterlab>=0.2.4",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyter-lsp>=2.3.0",
    "jupyterlab>=4.5.3",
    "jupyterlab-lsp>=5.2.0",
    "jupyterlab-pygments>=0.3.0",
    "python-lsp-server[all]>=1.14.0",
]
